# advent-of-code-2025

./: .gitignore  pyproject.toml
days/01/: solve.py
days/02/: solve.py
src/advent_of_code_2025/: utils.py
